# DataLedger

./: README.md
dataledger-repo/: CONTRIBUTING.md  LICENSE-MIT  README.md
dataledger-repo/cli/src/: main.rs
dataledger-repo/dataledger-core/: Cargo.toml  dataledger_poc.py
dataledger-repo/dataledger-core/src/: attestation.rs  crypto.rs  error.rs  lib.rs  manifest.rs
dataledger-repo/dataledger-py/: README.md
dataledger-repo/dataledger-spec/: SPEC.md
dataledger-repo/docs/: integration-guide.md
dataledger-repo/test-vectors/: vectors.json
