[package]
name = "dataledger-core"
version = "0.1.0"
edition = "2021"
description = "Reference implementation of the DataLedger AI training data provenance standard"
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/dataledger/dataledger"
homepage = "https://codeberg.org/dataledger/dataledger"
keywords = ["ai", "provenance", "dataset", "cryptography", "ed25519"]
categories = ["cryptography", "data-structures"]
readme = "README.md"

[lib]
name = "dataledger_core"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "dataledger"
path = "../cli/src/main.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jcs = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "1"
rand = "0.8"

[dev-dependencies]
serde_json = "1"
